feat: 사용자 목록 조회를 위한 userService 내부 api 구현